--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.firebaseemailauthproject">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,12 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:parentActivityName=".SelectionActivity"
-            android:name=".PhoneActivity"></activity>
-        <activity
-            android:name=".SelectionActivity"
-            android:launchMode="singleTop">
+        <activity android:name=".PhoneAuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +20,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".PhoneActivity"
+            android:parentActivityName=".SelectionActivity" />
+        <activity
+            android:name=".SelectionActivity"
+            android:launchMode="singleTop">
+
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:parentActivityName=".SelectionActivity"></activity>
+            android:parentActivityName=".SelectionActivity" />
     </application>
 
 </manifest>
